# book_shop_drf_p23

./: Makefile  README.md  manage.py  pyproject.toml
apps/: urls.py
apps/shared/: models.py
apps/shops/: models.py
apps/shops/migrations/: 0001_initial.py
apps/users/: admin.py  apps.py  email_service.py  managers.py  models.py  serializers.py  urls.py  views.py
apps/users/management/commands/: generate_data.py
apps/users/templates/: email.html
root/: drf_settings.py  settings.py  urls.py
