[tool.poetry]
name = "book_shop_drf_p23"
version = "0.1.0"
description = ""
authors = ["shahzod7176 <qoshqulovshahzod9@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.2"
django-filter = "^24.3"
djangorestframework = "^3.15.2"
django-mptt = "^0.16.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
pillow = "^10.4.0"
djangorestframework-simplejwt = "^5.3.1"
celery = "^5.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
